# vcscout

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  runner.py
src/agents/: competitor_analyst.py  debate_panel.py  devils_advocate.py  input_validator.py  market_researcher.py  writer.py
src/db/: connection.py  models.py  repository.py
src/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/llm/: __init__.py  autogen_config.py  gemini.py  groq_client.py
src/tools/: __init__.py  scraper.py  search.py
src/ui/: __init__.py
tests/: __init__.py  conftest.py  test_graph.py
